--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,91 +1,90 @@
-.primaryNav {
-  display:flex;
-  list-style-type:none;
+.container {
+  display: flex;
   align-items: center;
-  padding:2em;
   gap: 3em;
+  padding:2em;
 }
 
-.primaryNav hr {
+.containerContainer hr {
   display: none;
 }
 
-.left {
-  margin-right:auto;
+.rightItem {
+  margin-left: auto;
 }
 
 .menuIcon {
-  margin: 2em;
+  padding: 2em;
   display: none;
 }
 
-.primaryNav ul a.active {
-  font-weight: 500;
-  position: relative;
-}
-
-.primaryNav ul a.active::after {
-  content: '';
-  position: absolute;
-  bottom: -4px;
-  left: 0;
+.closeButton {
+  color: var(--white);
+  display: flex;
+  justify-content: flex-end;
   width: 100%;
-  height: 2px;
+  padding-right: 16px;
+  font-size: 2em;
 }
 
 @media (max-width: 768px) {
-  .menuIcon {
+  .containerContainer {
     display: block;
-    cursor: pointer;
-    width: 40px;
-    height: 40px;
-  }
-
-  .primaryNav {
-    align-items:start;
-    position: fixed;
-    flex-direction: column;
-    left: 0;
     top: 0;
-    width: 00;
-    gap: 0;
-    padding: 2em 0 0 0;
-    height: calc(100vh);
-    transition: all 0.3s ease-in;
-    overflow: hidden;
-    background-color:var(--light-black);
+    position: fixed;
+    height: 100vh;
   }
 
-  .primaryNav hr {
+  .containerContainer hr {
     display: block;
     border-color: rgba(255, 255, 255, 0.1);
     width: 100%;
     margin: 1em 0 1em 0;
   }
 
-  .primaryNav.active {
-    width: 250px;
-    padding: 2em;
+  .menuIcon {
+    display: block;
+    cursor: pointer;
   }
 
-  .primaryNav li {
-    margin-right: unset;
-    text-align: left;
-  }
-
-  .primaryLi {
-    font-size: 1.50em;
+  .container {
+    align-items:start;
+    display: flex;
+    position: fixed;
+    width: 0;
+    gap: 0;
+    overflow: hidden;
+    flex-direction: column;
+    background-color:var(--light-black);
+    height: 100vh;
     color: var(--white);
-    margin: 10px 0 10px 0;
+    transition: all 0.3s ease-in;
+    padding: 2em 0;
   }
 
-  .secondaryLi {
-    font-size: 0.75em;
-    color: var(--light-gray);
-    margin: 8px 0 8px 0;
+  .container.active {
+    width: 250px;
+    padding-left:2em;
+  }
+
+  .rightItem {
+    margin: 0;
+    align-self: start;
   }
 
   .logo {
     display: none;
+  }
+
+  .primaryLink {
+    font-size: 1.25em;
+    padding: 8px 8px 8px 0;
+    color: var(--white);
+  }
+
+  .secondaryLink {
+    font-size: 0.75em;
+    padding: 8px 8px 8px 0;
+    color: var(--light-gray);
   }
 }
