--- a/src/components/homeSections/description/description.module.css
+++ b/src/components/homeSections/description/description.module.css
@@ -4,11 +4,34 @@
   justify-content: space-between;
   align-items: center;
   padding: 6rem;
-  width: 1200px;
+  width: 100%;
+  max-width: 1200px;
   min-height: 80vh;
   margin: auto;
 }
 
 .container h2 {
   color: var(--light-black)
+}
+
+@media screen and (max-width: 960px) {
+  .container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    padding: 3rem;
+    margin-top: 3rem;
+    min-height: 0vh;
+  }
+
+  .container h1 {
+    text-align: center;
+  }
+
+  .container h2 {
+    text-align: center;
+  }
 }
