feat: improve responsive

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,7 +6,9 @@
 }
 
 :root{
-  --white: #EEF4F7;
+  --white: #e9f3f6;
+  --blue: #91d4de;
+  --orange: #fbc8a0;
   --black: #371a45;
   --light-black: #625a66;
   --light-gray:  #bbbbbb;
