--- a/src/components/homeSections/experience/experience.module.css
+++ b/src/components/homeSections/experience/experience.module.css
@@ -1,4 +1,4 @@
-.container {
+.experienceWrapper {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -33,13 +33,13 @@
 }
 
 @media screen and (max-width: 1200px) {
-  .container {
+  .experienceWrapper {
     flex-direction: column;
   }
 }
 
 @media screen and (max-width: 768px) {
-  .container {
+  .experienceWrapper {
     padding: 3rem;
   }
 }
