--- a/src/components/techIcon/techIcon.module.css
+++ b/src/components/techIcon/techIcon.module.css
@@ -1,9 +1,13 @@
 .techItem {
   width: 50px;
   height: 50px;
-  background-color: #5b2f71;
+  background-color: #eaeaea;
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.dark {
+  background-color: #5b2f71;
 }
