--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,6 +41,12 @@ a {
   background-color: var(--black);
 }
 
+.center-element {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
