--- a/src/components/homeSections/experience/experience.module.css
+++ b/src/components/homeSections/experience/experience.module.css
@@ -11,7 +11,7 @@
 }
 
 .profileImage {
-  outline: 2px solid var(--green);
+  outline: 2px solid var(--white);
   border-radius: 5px;
 }
 
@@ -50,4 +50,3 @@
     height: 240px;
   }
 }
-
